--- a/apache2.conf
+++ b/apache2.conf
@@ -27,12 +27,12 @@ Listen {PORT}
 	Require all denied
 </Directory>
 
-<Directory /var/www/>
+<Directory /var/www/html>
 	AllowOverride All
 	Require all granted
 </Directory>
 
-DocumentRoot /var/www/html
+DocumentRoot /var/www/html/docroot
 
 AccessFileName .htaccess
 <FilesMatch "^\.ht">
@@ -55,7 +55,7 @@ CustomLog /dev/stdout combined
 # to the list of resources to look for rather than replace
 # https://httpd.apache.org/docs/current/mod/mod_dir.html#directoryindex
 DirectoryIndex disabled
-DirectoryIndex default.htm default.html index.htm index.html index.php hostingstart.html
+DirectoryIndex index.php
 
 ServerTokens Prod
 ServerSignature Off
